{
    "name": "VRInputActions",
    "maps": [
        {
            "name": "Default",
            "id": "6c02b9df-4ee3-4df4-b0fd-3997afa6234d",
            "actions": [
                {
                    "name": "LeftJoystick",
                    "type": "Value",
                    "id": "223de6f9-8abd-462b-8100-d75180030698",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightJoystick",
                    "type": "Value",
                    "id": "2439f92b-2cf9-4ad2-a0d4-ec0271592764",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightTrigger",
                    "type": "Value",
                    "id": "1046e562-b248-4c21-bb16-a83f3f9528b0",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Trigger",
                    "type": "Value",
                    "id": "caec04b3-edfd-4ee7-8ac6-83e501dc891e",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Grip",
                    "type": "Value",
                    "id": "79a321b4-777d-447e-9ac1-b06da4d7dbcc",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Right_PrimaryButton",
                    "type": "Button",
                    "id": "1815fc94-4bc7-4ccd-b751-a0f580b509e0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Left_SecondaryButton",
                    "type": "Button",
                    "id": "6728a392-ebe7-4a61-86b8-1667251956f4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "153621e5-13a9-4a3a-b20c-3a565e935cd2",
                    "path": "<OculusTouchController>{LeftHand}/thumbstick",
                    "interactions": "",
                    "processors": "",
                    "groups": "VR",
                    "action": "LeftJoystick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4be033f1-7394-444d-9f77-e2bb4d066dac",
                    "path": "<XRController>{RightHand}/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "VR",
                    "action": "RightTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d00a5c5f-0889-481a-9eea-332b3e382051",
                    "path": "<OculusTouchController>{RightHand}/thumbstick",
                    "interactions": "",
                    "processors": "",
                    "groups": "VR",
                    "action": "RightJoystick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "59c28c28-1597-4647-9829-cc390b381e8d",
                    "path": "<OculusTouchController>/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "VR",
                    "action": "Trigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9879db77-8b4e-451c-8077-93ea4bdf6e9c",
                    "path": "<XRController>/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "VR",
                    "action": "Grip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b0a97490-5d28-4ea8-bca6-8dd9616f1857",
                    "path": "<XRController>{RightHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "VR",
                    "action": "Right_PrimaryButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fcba368a-efc9-4688-88b4-51daca9e9551",
                    "path": "<XRController>{LeftHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "VR",
                    "action": "Left_SecondaryButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Keyboard",
            "id": "72ba2f07-3b8d-4474-87c1-25a24bee59df",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "0e8bfdea-a444-4cd9-89e1-054b44b6b775",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "06fbe68b-977c-4912-99a6-846c286638ec",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "ff4f48e0-f211-4ffe-9f55-99d2f54eaa09",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "K&M",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "f053211b-cdc2-4cc3-8817-8ec60b9773ff",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "K&M",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a0421968-ee83-49f2-a672-504215cde7da",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "K&M",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "45f15823-84f3-415f-8732-55aec9911369",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "K&M",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "K&M",
            "bindingGroup": "K&M",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "VR",
            "bindingGroup": "VR",
            "devices": [
                {
                    "devicePath": "<OpenXRHmd>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<OculusTouchController>{LeftHand}",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<OculusTouchController>{RightHand}",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}